// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskList matches snapshot 1`] = `
<v-card-stub
  class="mt-3"
  loaderheight="4"
  tag="div"
>
  <v-card-actions-stub
    class="px-3"
  >
    <v-tooltip-stub
      bottom="true"
      closedelay="0"
      contentclass=""
      fixed="true"
      maxwidth="auto"
      nudgebottom="0"
      nudgeleft="0"
      nudgeright="0"
      nudgetop="0"
      nudgewidth="0"
      opendelay="0"
      openonhover="true"
      tag="span"
    >
       
      <span>
        Mark all as done
      </span>
    </v-tooltip-stub>
    
     
    0 Items
    
    <v-spacer-stub />
     
    <v-icon-stub
      class="mt-3 mr-3"
    >
      mdi-filter-variant
    </v-icon-stub>
     
    <filters-stub
      filter="[object Object]"
    />
     
    <v-spacer-stub />
     
    <v-tooltip-stub
      bottom="true"
      closedelay="0"
      contentclass=""
      fixed="true"
      maxwidth="auto"
      nudgebottom="0"
      nudgeleft="0"
      nudgeright="0"
      nudgetop="0"
      nudgewidth="0"
      opendelay="0"
      openonhover="true"
      tag="span"
    >
       
      <span>
        Show/Hide labels
      </span>
    </v-tooltip-stub>
  </v-card-actions-stub>
   
  <v-card-text-stub
    class="pa-0"
  >
    <v-data-iterator-stub
      customfilter="[Function]"
      customgroup="[Function]"
      customsort="[Function]"
      expanded=""
      footerprops="[object Object]"
      groupby=""
      groupdesc=""
      itemkey="id"
      items=""
      itemsperpage="15"
      loadingtext="$vuetify.dataIterator.loadingText"
      locale="en-US"
      mobilebreakpoint="600"
      nodatatext="$vuetify.noDataText"
      noresultstext="$vuetify.dataIterator.noResultsText"
      options="[object Object]"
      page="1"
      selectablekey="isSelectable"
      serveritemslength="0"
      sortby=""
      sortdesc=""
      value=""
    >
       
      <template>
        <v-list-stub
          class="py-0"
          tag="div"
        >
          <v-divider-stub />
           
          <v-list-item-stub
            activeclass=""
            class="task-item text-cs-center"
            tag="div"
          >
            <v-list-item-content-stub>
              <span
                class="text-center success--text"
              >
                <v-icon-stub>
                  mdi-party-popper
                </v-icon-stub>
                 No Tasks
                
              </span>
            </v-list-item-content-stub>
          </v-list-item-stub>
        </v-list-stub>
         
        <v-divider-stub />
      </template>
    </v-data-iterator-stub>
  </v-card-text-stub>
</v-card-stub>
`;

exports[`TaskList matches snapshot with data 1`] = `
<v-card-stub
  class="mt-3"
  loaderheight="4"
  tag="div"
>
  <v-card-actions-stub
    class="px-3"
  >
    <v-tooltip-stub
      bottom="true"
      closedelay="0"
      contentclass=""
      fixed="true"
      maxwidth="auto"
      nudgebottom="0"
      nudgeleft="0"
      nudgeright="0"
      nudgetop="0"
      nudgewidth="0"
      opendelay="0"
      openonhover="true"
      tag="span"
    >
       
      <span>
        Mark all as done
      </span>
    </v-tooltip-stub>
    
     
    10 Items
    
    <v-spacer-stub />
     
    <v-icon-stub
      class="mt-3 mr-3"
    >
      mdi-filter-variant
    </v-icon-stub>
     
    <filters-stub
      filter="[object Object]"
    />
     
    <v-spacer-stub />
     
    <v-tooltip-stub
      bottom="true"
      closedelay="0"
      contentclass=""
      fixed="true"
      maxwidth="auto"
      nudgebottom="0"
      nudgeleft="0"
      nudgeright="0"
      nudgetop="0"
      nudgewidth="0"
      opendelay="0"
      openonhover="true"
      tag="span"
    >
       
      <span>
        Show/Hide labels
      </span>
    </v-tooltip-stub>
  </v-card-actions-stub>
   
  <v-card-text-stub
    class="pa-0"
  >
    <v-data-iterator-stub
      customfilter="[Function]"
      customgroup="[Function]"
      customsort="[Function]"
      expanded=""
      footerprops="[object Object]"
      groupby=""
      groupdesc=""
      itemkey="id"
      items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
      itemsperpage="15"
      loadingtext="$vuetify.dataIterator.loadingText"
      locale="en-US"
      mobilebreakpoint="600"
      nodatatext="$vuetify.noDataText"
      noresultstext="$vuetify.dataIterator.noResultsText"
      options="[object Object]"
      page="1"
      selectablekey="isSelectable"
      serveritemslength="10"
      sortby=""
      sortdesc=""
      value=""
    >
       
      <template>
        <v-list-stub
          class="py-0"
          tag="div"
        >
          <v-divider-stub />
           
          <v-list-item-stub
            activeclass=""
            class="task-item text-cs-center"
            tag="div"
          >
            <v-list-item-content-stub>
              <span
                class="text-center success--text"
              >
                <v-icon-stub>
                  mdi-party-popper
                </v-icon-stub>
                 No Tasks
                
              </span>
            </v-list-item-content-stub>
          </v-list-item-stub>
        </v-list-stub>
         
        <v-divider-stub />
      </template>
    </v-data-iterator-stub>
  </v-card-text-stub>
</v-card-stub>
`;
